--- a/templates/base.html
+++ b/templates/base.html
@@ -84,7 +84,7 @@
     {% block twitter_card %}
         {% for name,link in SOCIAL if name in ['twitter'] %}
             <meta name="twitter:card" content="summary_large_image">
-            <meta name="twitter:site" content="@{{ link|replace('http://', 'https://')|replace('https://twitter.com/', '') }}">
+            <meta name="twitter:site" content="@{{ link|replace('https://', 'https://')|replace('https://twitter.com/', '') }}">
             <meta name="twitter:title" content="{{ SITENAME }}">
             <meta name="twitter:description" content="{{ SITESUBTITLE|default('View the blog.') }}">
             {% if HEADER_COVER %}
