--- a/templates/sharing.html
+++ b/templates/sharing.html
@@ -16,7 +16,7 @@
             <a class="addthis_button_compact"></a>
             <a class="addthis_counter addthis_bubble_style"></a>
         </div>
-        <script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#pubid={{ ADDTHIS_PUBID }}"></script>
+        <script type="text/javascript" src="https://s7.addthis.com/js/300/addthis_widget.js#pubid={{ ADDTHIS_PUBID }}"></script>
         <!-- AddThis Button END -->
     </div>
 {% endif %}
